--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="drama_rating">評分</string>
     <string name="drama_created_at">出版日期</string>
     <string name="drama_total_views">觀看次數</string>
+    <string name="disconnect">目前無網路連線，請檢查網路</string>
+    <string name="connected">已連線</string>
 </resources>
